Learn area: adjust live sample calls to match generated heading ids

--- a/files/en-us/learn/javascript/building_blocks/events/index.html
+++ b/files/en-us/learn/javascript/building_blocks/events/index.html
@@ -505,9 +505,9 @@ video.onclick = function() {
 
 <p>The following example demonstrates the behavior described above. Hover over the numbers and click on them to trigger events, and then observe the output that gets logged.</p>
 
-{{EmbedLiveSample("example_code_event_phases", "85ch", "400")}}
+{{EmbedLiveSample("Example_code_event_phases", "85ch", "400")}}
 
-<h5 id="example_code_event_phases">Example code: event phases</h5>
+<h5>Example code: event phases</h5>
 
 <pre class="brush: html">
 &lt;div&gt;1
