--- a/files/en-us/learn/javascript/first_steps/variables/index.html
+++ b/files/en-us/learn/javascript/first_steps/variables/index.html
@@ -62,7 +62,7 @@ buttonA.onclick = function() {
 }
 </pre>
 
-<p>{{ EmbedLiveSample('Variable example', '100%', 120) }}</p>
+<p>{{ EmbedLiveSample('Variable_example', '100%', 120) }}</p>
 
 <p>In this example pressing the button runs some code. The first line pops a box up on the screen that asks the reader to enter their name, and then stores the value in a variable. The second line displays a welcome message that includes their name, taken from the variable value and the third line displays that name on the page.</p>
 
