Updated description to refer to "temporary" heuristics.

--- a/files/en-us/web/privacy/state_partitioning/index.html
+++ b/files/en-us/web/privacy/state_partitioning/index.html
@@ -311,7 +311,7 @@ tags:
   will <b>disable</b> all ETP and State Partitioning web compatiblity features.
   Disabling these features can be useful when testing, to ensure your website is
   fully compatible with the State Partitioning mechanism in Firefox and it does
-  not rely on heuristics.
+  not rely on temporary heuristics.
   <p>Features disabled by the pref include:</p>
   <ul>
     <li><a href="#partitioning_heuristics">Storage access heuristics</a>:
