--- a/files/en-us/games/introduction_to_html5_game_development/index.html
+++ b/files/en-us/games/introduction_to_html5_game_development/index.html
@@ -12,22 +12,22 @@ tags:
 <h2 id="Advantages">Advantages</h2>
 
 <ol>
- <li>>Games built with HTML5 work on smartphones, tablets, PCs and Smart TVs.</li>
+ <li>Games built with HTML5 work on smartphones, tablets, PCs and Smart TVs.</li>
  <li>Advertise and promote your game all over the Web as well as other media.</li>
  <li>Payments. Charge what you want and use whatever payment processing service you like.</li>
- <li>>Update your game whenever you want.</li>
+ <li>Update your game whenever you want.</li>
  <li>Collect your own analytics!</li>
  <li>Connect with your customers more closely,</li>
- <li>>Players can play the game anywhere, anytime.</li>
+ <li>Players can play the game anywhere, anytime.</li>
 </ol>
 
 <h2 id="Web_Technologies">Web Technologies</h2>
 
-<table class="standard-table">
+<table class="no-markdown standard-table">
  <thead>
   <tr>
-   <th scope="col" style="text-align: left;"><strong>Function</strong></th>
-   <th scope="col" style="text-align: left;"><strong>Technology</strong></th>
+   <th scope="col"><strong>Function</strong></th>
+   <th scope="col"><strong>Technology</strong></th>
   </tr>
  </thead>
  <tbody>
