Additional information about prostitutionKey on the cookies API and release notes

--- a/files/en-us/mozilla/firefox/releases/94/index.html
+++ b/files/en-us/mozilla/firefox/releases/94/index.html
@@ -54,7 +54,7 @@ tags:
 <h2 id="Changes_for_add-on_developers">Changes for add-on developers</h2>
 
 <ul>
-  <li>Support for <code>partitionKey</code> is added to {{WebExtAPIRef('cookies.cookie')}} to provide the first-party URL of a cookie when it's in storage that is partitioned by top-level site. ({{bug(1669716)}})</li>
+  <li>Support for <code>partitionKey</code>, the first-party URL of a cookie when it's in storage that is partitioned by top-level site, is added to {{WebExtAPIRef('cookies.get')}}, {{WebExtAPIRef('cookies.getAll')}}, {{WebExtAPIRef('cookies.set')}}, {{WebExtAPIRef('cookies.remove')}}, and {{WebExtAPIRef('cookies.cookie')}}. ({{bug(1669716)}})</li>
 </ul>
 
 <h4 id="removals_webext">Removals</h4>
