Prepare XSLT for Markdowning

--- a/files/en-us/web/xslt/element/stylesheet/index.html
+++ b/files/en-us/web/xslt/element/stylesheet/index.html
@@ -29,32 +29,32 @@ tags:
 <h3 id="Required_Attributes">Required Attributes</h3>
 
 <dl>
- <dt><code id="attr-version">version</code></dt>
+ <dt><code>version</code></dt>
  <dd>Specifies the version of XSLT required by this stylesheet.</dd>
 </dl>
 
 <h3 id="Optional_Attributes">Optional Attributes</h3>
 
 <dl>
- <dt><code id="attr-exclude-result-prefixes">exclude-result-prefixes</code></dt>
+ <dt><code>exclude-result-prefixes</code></dt>
  <dd>Specifies any namespace used in this document that should not be sent to the output document. The list is whitespace separated.</dd>
- <dt><code id="attr-extension-element-prefixes">extension-element-prefixes</code></dt>
+ <dt><code>extension-element-prefixes</code></dt>
  <dd>Specifies a space-separated list of any namespace prefixes for extension elements in this document.</dd>
- <dt><code id="attr-default-collation">default-collation</code></dt>
+ <dt><code>default-collation</code></dt>
  <dd>Specifies the default collation used by all {{Glossary("XPath")}} expressions appearing in attributes or text value templates that have the element as an ancestor, unless overridden by another <code>default-collation</code> attribute on an inner element. It also determines the collation used by certain XSLT constructs (such as <code><a href="/en-US/docs/Web/XSLT/Element/key">&lt;xsl:key&gt;</a></code> and <code><a href="/en-US/docs/Web/XSLT/Element/for-each-group">&lt;xsl:for-each-group&gt;</a></code>) within its scope.</dd>
- <dt><code id="attr-default-mode">default-mode</code></dt>
+ <dt><code>default-mode</code></dt>
  <dd>Defines the default value for the <code>mode</code> attribute of all <code><a href="/en-US/docs/Web/XSLT/Element/template">&lt;xsl:template&gt;</a></code> and <code><a href="/en-US/docs/Web/XSLT/Element/apply-templates">&lt;xsl:apply-templates&gt;</a></code> elements within its scope.</dd>
- <dt><code id="attr-default-validation">default-validation</code></dt>
+ <dt><code>default-validation</code></dt>
  <dd>Defines the default value of the <code>validation</code> attribute of all relevant instructions appearing within its scope.</dd>
- <dt><code id="attr-expand-text">expand-text</code></dt>
+ <dt><code>expand-text</code></dt>
  <dd>Determines whether descendant text nodes of the element are treated as text value templates.</dd>
- <dt><code id="attr-id">id</code></dt>
+ <dt><code>id</code></dt>
  <dd>Specifies an <code>id</code> for this stylesheet. This is most often used when the stylesheet is embedded in another XML document.</dd>
- <dt><code id="attr-input-type-annotations">input-type-annotations</code></dt>
+ <dt><code>input-type-annotations</code></dt>
  <dd>Specifies whether type annotations are stripped from the element so the same results are produced whether the source documents have been validated against a schema or not.</dd>
- <dt><code id="attr-use-when">use-when</code></dt>
+ <dt><code>use-when</code></dt>
  <dd>Determines whether the element and all the nodes that have it as ancestor are excluded from the stylesheet.</dd>
- <dt><code id="attr-xpath-default-namespace">xpath-default-namespace</code></dt>
+ <dt><code>xpath-default-namespace</code></dt>
  <dd>Specifies the namespace that will be used if the element name is unprefixed or an unprefixed type name within an XPath expression.</dd>
 </dl>
 
