--- a/files/en-us/web/xslt/transforming_xml_with_xslt/for_further_reading/index.html
+++ b/files/en-us/web/xslt/transforming_xml_with_xslt/for_further_reading/index.html
@@ -30,7 +30,7 @@ tags:
  </li>
 </ul>
 
-<p><span class="comment"><a href="https://www.amazon.com/XSLT-Programmers-Reference-Programmer/dp/0764543814">https://www.amazon.com/XSLT-Programmers-Reference-Programmer/dp/0764543814</a></span></p>
+<p><a href="https://www.amazon.com/XSLT-Programmers-Reference-Programmer/dp/0764543814">https://www.amazon.com/XSLT-Programmers-Reference-Programmer/dp/0764543814</a></p>
 
 <ul>
  <li><strong>XSLT</strong>
@@ -48,7 +48,7 @@ tags:
  </li>
 </ul>
 
-<p><span class="comment"><a href="https://www.amazon.com/Xslt-Doug-Tidwell/dp/0596000537">https://www.amazon.com/Xslt-Doug-Tidwell/dp/0596000537</a></span></p>
+<p><a href="https://www.amazon.com/Xslt-Doug-Tidwell/dp/0596000537">https://www.amazon.com/Xslt-Doug-Tidwell/dp/0596000537</a></p>
 
 <ul>
  <li><strong>Learning XML, Second Edition</strong>
@@ -66,7 +66,7 @@ tags:
  </li>
 </ul>
 
-<p><span class="comment"><a href="https://www.amazon.com/gp/product/0596004206">https://www.amazon.com/gp/product/0596004206</a></span></p>
+<p><a href="https://www.amazon.com/gp/product/0596004206">https://www.amazon.com/gp/product/0596004206</a></p>
 
 <h2 id="Digital">Digital</h2>
 
