--- a/files/en-us/web/xslt/using_the_mozilla_javascript_interface_to_xsl_transformations/index.html
+++ b/files/en-us/web/xslt/using_the_mozilla_javascript_interface_to_xsl_transformations/index.html
@@ -18,8 +18,7 @@ tags:
 <p>Before you can use it, you must import a stylesheet with the {{domxref("XSLTProcessor.importStylesheet()")}} method. It has a single parameter, which is the DOM Node of the XSLT stylesheet to import.</p>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>The import is live, meaning that if you alter the stylesheet DOM after importing it, this will be reflected in the processing. Rather than modifying the DOM it is recommended to use stylesheet parameters which are usually easier and can give better performance.</p>
+  <p><strong>Note:</strong> The import is live, meaning that if you alter the stylesheet DOM after importing it, this will be reflected in the processing. Rather than modifying the DOM it is recommended to use stylesheet parameters which are usually easier and can give better performance.</p>
 </div>
 
 <pre class="brush: js">var testTransform = document.implementation.createDocument("", "test", null);
@@ -114,7 +113,7 @@ var newFragment = processor.transformToFragment(domToBeTransformed, ownerDocumen
 <h3 id="Original_Document_Information">Original Document Information</h3>
 
 <ul>
- <li>Author(s): <a class="link-mailto" href="mailto:mike@theoretic.com">Mike Hearn</a></li>
+ <li>Author(s): Mike Hearn</li>
  <li>Last Updated Date: December 21, 2005</li>
  <li>Copyright Information: Copyright (C) Mike Hearn</li>
 </ul>
