--- a/files/en-us/web/xslt/xslt_js_interface_in_gecko/advanced_example/index.html
+++ b/files/en-us/web/xslt/xslt_js_interface_in_gecko/advanced_example/index.html
@@ -12,7 +12,7 @@ tags:
 
 <p>Once the transformation is complete, the result is appended to the document, as shown in this example.</p>
 
-<p><small><strong>Figure 7: Sorting based on div content<span class="comment">view example</span></strong></small></p>
+<p><strong>Figure 7: Sorting based on div content: view example</strong></p>
 
 <pre class="brush: js">// XHTML Fragment:
 
