--- a/files/en-us/web/xpath/functions/choose/index.html
+++ b/files/en-us/web/xpath/functions/choose/index.html
@@ -10,7 +10,7 @@ tags:
 <p><br>
  The <code>choose</code> function returns one of the specified objects based on a boolean parameter.</p>
 <div class="note">
- <strong>Note:</strong> This method should be used instead of <code>if()</code>, which has been deprecated.</div>
+ <p><strong>Note:</strong> This method should be used instead of <code>if()</code>, which has been deprecated.</p></div>
 <h3 id="Syntax">Syntax</h3>
 <pre class="eval">choose( boolean , object1, object2 )
 </pre>
@@ -32,7 +32,7 @@ tags:
 <h3 id="Returns">Returns</h3>
 <p>If the boolean parameter is true, the first object is returned; otherwise, the second object is returned.</p>
 <div class="note">
- <strong>Note:</strong> All parameters are evaluated, even the one that's not returned.</div>
+ <p><strong>Note:</strong> All parameters are evaluated, even the one that's not returned.</p></div>
 <h3 id="Defined">Defined</h3>
 <p><a href="https://www.w3.org/TR/xforms11/#fn-choose">XForms 1.1</a></p>
 <h3 id="Gecko_support">Gecko support</h3>
