--- a/files/en-us/web/xpath/index.html
+++ b/files/en-us/web/xpath/index.html
@@ -20,8 +20,7 @@ tags:
 <p>XPath uses a path notation (as in URLs) for navigating through the hierarchical structure of an XML document. It uses a non-XML syntax so that it can be used in URIs and XML attribute values.</p>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>Support for XPath varies widely; it's supported reasonably well in Firefox (although there are no plans to improve support further), while other browsers implement it to a lesser extent, if at all. If you need a polyfill, you may consider <a href="https://nchc.dl.sourceforge.net/project/js-xpath/js-xpath/1.0.0/xpath.js">js-xpath</a> or <a href="https://github.com/google/wicked-good-xpath">wicked-good-xpath</a>.</p>
+  <p><strong>Note:</strong> Support for XPath varies widely; it's supported reasonably well in Firefox (although there are no plans to improve support further), while other browsers implement it to a lesser extent, if at all. If you need a polyfill, you may consider <a href="https://nchc.dl.sourceforge.net/project/js-xpath/js-xpath/1.0.0/xpath.js">js-xpath</a> or <a href="https://github.com/google/wicked-good-xpath">wicked-good-xpath</a>.</p>
 </div>
 
 <h2 id="Documentation">Documentation</h2>
